force-app/main/default/objects/Opportunity/fields/Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Date__c</fullName>
    <label>Amendment Date</label>
    <description>Date of last amendment or modification to the solicitation</description>
    <type>Date</type>
</CustomField>