force-app/main/default/objects/Opportunity/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <description>User assigned to review and respond to this solicitation</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RFP Opportunities</relationshipLabel>
    <relationshipName>RFP_Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>