force-app/main/default/objects/Opportunity/fields/Buyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Email__c</fullName>
    <label>Buyer Email</label>
    <description>Email address of the procurement officer or buyer contact</description>
    <type>Email</type>
</CustomField>