force-app/main/default/objects/Opportunity/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <label>Buyer Name</label>
    <description>Name of the procurement officer or buyer contact</description>
    <type>Text</type>
    <length>255</length>
</CustomField>