force-app/main/default/objects/Opportunity/fields/Buyer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Phone__c</fullName>
    <label>Buyer Phone</label>
    <description>Phone number of the procurement officer or buyer contact</description>
    <type>Phone</type>
</CustomField>