force-app/main/default/objects/Opportunity/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <description>Indicates how this opportunity was created - manually entered or automatically imported</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry</fullName>
                <default>true</default>
                <label>Manual Entry</label>
            </value>
            <value>
                <fullName>Automated Scraper</fullName>
            </value>
            <value>
                <fullName>API Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>