force-app/main/default/objects/Opportunity/fields/Days_Until_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Close__c</fullName>
    <label>Days Until Close</label>
    <description>Number of days remaining until the solicitation closes (auto-calculated)</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <formula>FLOOR(CloseDate - TODAY())</formula>
</CustomField>