force-app/main/default/objects/Opportunity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <description>Government department or agency issuing the solicitation</description>
    <type>Text</type>
    <length>255</length>
</CustomField>