force-app/main/default/objects/Opportunity/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <label>Portal URL</label>
    <description>Direct link to the solicitation on the procurement portal</description>
    <type>Url</type>
</CustomField>