force-app/main/default/objects/Opportunity/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <label>Published Date</label>
    <description>Date the solicitation was published or posted</description>
    <type>Date</type>
</CustomField>