force-app/main/default/objects/Opportunity/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <label>Response Status</label>
    <description>Status of our response to this solicitation</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New - Not Reviewed</fullName>
                <default>true</default>
                <label>New - Not Reviewed</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Go - Preparing Response</fullName>
            </value>
            <value>
                <fullName>No Go - Not Pursuing</fullName>
            </value>
            <value>
                <fullName>Response Submitted</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Not Awarded</fullName>
            </value>
            <value>
                <fullName>Expired - No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>