force-app/main/default/objects/Opportunity/fields/Solicitation_Number__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Number__c</fullName>
    <label>Solicitation Number</label>
    <description>Unique solicitation/RFP number from the government portal</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>