force-app/main/default/objects/Opportunity/fields/Solicitation_Type__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Type__c</fullName>
    <label>Solicitation Type</label>
    <description>Type of government solicitation</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP - Request for Proposal</fullName>
            </value>
            <value>
                <fullName>RFB - Request for Bids</fullName>
            </value>
            <value>
                <fullName>RFQ - Request for Quote</fullName>
            </value>
            <value>
                <fullName>RFI - Request for Information</fullName>
            </value>
            <value>
                <fullName>IFB - Invitation for Bid</fullName>
            </value>
            <value>
                <fullName>RFT - Request for Tender</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>