force-app/main/default/objects/Opportunity/listViews/Manual_Review_Needed.listView-meta.xml
<ListView>
    <fullName>Manual_Review_Needed</fullName>
    <label>Manual Review Needed</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.Response_Status__c</field>
        <operation>equals</operation>
        <value>Scraper Error - Manual Review Needed</value>
    </filters>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.Portal_URL__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
</ListView>